Fixed horizontal scroll

--- a/src/styles/blocks/nav-mob.scss
+++ b/src/styles/blocks/nav-mob.scss
@@ -87,7 +87,7 @@
       height: 100%;
       background-color: $colorHover;
       overflow-y: auto;
-      right: -110%;
+      right: -100%;
     }
 
     & .nav__list {
