--- a/src/styles/sections/company.scss
+++ b/src/styles/sections/company.scss
@@ -52,7 +52,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100vw;
+    width: 100%;
 
     @media (max-width: 1200px) {
       opacity: 0.3;
